fixed desktop height problem, modal going off screen beforehand.

--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -120,7 +120,7 @@
     max-width: 60%;
     position: relative;
     margin: auto;
-    margin-top: 50%;
+    margin-top: 30vh;
 
     .bottomBox {
       margin: 1em 0 0;
